<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>sh.adelessfox</groupId>
    <artifactId>psarc</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>24</maven.compiler.source>
        <maven.compiler.target>24</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <target.module.path>target/modules</target.module.path>

        <application.name>${project.name}</application.name>
        <application.version>1.0</application.version>
    </properties>

    <repositories>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/reversed-wtf/reversed-toolbox</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <profiles>
        <profile>
            <id>launcher-windows</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <configuration>
                            <launchers>
                                <launcher>
                                    <name>${application.name}-cli</name>
                                    <file>launcher/console.properties</file>
                                </launcher>
                            </launchers>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.18</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>24.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.17</version>
        </dependency>
        <dependency>
            <groupId>wtf.reversed</groupId>
            <artifactId>toolbox</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.tukaani</groupId>
            <artifactId>xz</artifactId>
            <version>1.10</version>
        </dependency>
        <dependency>
            <groupId>io.github.mkpaz</groupId>
            <artifactId>atlantafx-base</artifactId>
            <version>2.1.0</version>
        </dependency>
        <dependency>
            <groupId>io.github.mkpaz</groupId>
            <artifactId>devtoolsfx-gui</artifactId>
            <version>1.0.1</version>
            <exclusions>
                <exclusion>
                    <groupId>org.jspecify</groupId>
                    <artifactId>jspecify</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.1</version>
            <exclusions>
                <exclusion>
                    <groupId>com.google.errorprone</groupId>
                    <artifactId>error_prone_annotations</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.github.jbock-java</groupId>
            <artifactId>dapper</artifactId>
            <version>2.41.2</version>
        </dependency>
        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
            <version>4.7.7</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>sh.adelessfox.psarc.App</mainClass>
                    <options>
                        <option>--add-opens=javafx.graphics/javafx.stage=psarc.app</option>
                        <option>--add-opens=javafx.graphics/com.sun.javafx.tk=psarc.app</option>
                        <option>--enable-native-access=javafx.graphics</option>
                        <option>--enable-native-access=psarc.app</option>
                        <option>-Dprism.forceUploadingPainter=true</option>
                    </options>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>io.github.jbock-java</groupId>
                            <artifactId>dapper-compiler</artifactId>
                            <version>2.41.2</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <outputDirectory>${target.module.path}</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.8.1</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeScope>runtime</includeScope>
                            <outputDirectory>${target.module.path}</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.6.5</version>
                <configuration>
                    <type>APP_IMAGE</type>
                    <appVersion>${application.version}</appVersion>
                    <name>${application.name}</name>
                    <destination>target/dist</destination>
                    <vendor>ShadelessFox</vendor>
                    <modulePaths>
                        <modulePath>${target.module.path}</modulePath>
                    </modulePaths>
                    <jLinkOptions>
                        <jLinkOption>--compress=2</jLinkOption>
                        <jLinkOption>--strip-debug</jLinkOption>
                        <jLinkOption>--strip-native-commands</jLinkOption>
                        <jLinkOption>--no-header-files</jLinkOption>
                        <jLinkOption>--no-man-pages</jLinkOption>
                    </jLinkOptions>
                    <javaOptions>
                        <javaOption>--add-opens=javafx.graphics/javafx.stage=psarc.app</javaOption>
                        <javaOption>--add-opens=javafx.graphics/com.sun.javafx.tk=psarc.app</javaOption>
                        <javaOption>--enable-native-access=javafx.graphics</javaOption>
                        <javaOption>--enable-native-access=psarc.app</javaOption>
                        <javaOption>-Dprism.forceUploadingPainter=true</javaOption>
                    </javaOptions>
                    <module>psarc.app/sh.adelessfox.psarc.App</module>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jpackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>